# uthenticode

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODEOWNERS  Dockerfile  Doxyfile  Doxyfile.in  LICENSE  Makefile  README.md  README_8md.html  VERSION  annotated.html  classes.html  classuthenticode_1_1Certificate-members.html  classuthenticode_1_1Certificate.html  classuthenticode_1_1SignedData-members.html  classuthenticode_1_1SignedData.html  classuthenticode_1_1WinCert-members.html  classuthenticode_1_1WinCert.html  dir_000001_000000.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dca5a89be41562c2d48b5579f194476b.html  dir_dca5a89be41562c2d48b5579f194476b_dep.map  dir_dca5a89be41562c2d48b5579f194476b_dep.md5  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  (+47 more)
.github/workflows/: ci.yml  codeql-analysis.yml  docs-deploy.yml  docs.yml  lint.yml  release.yml  tests.yml
.trunk/: trunk.yaml
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  pages_0.js  (+12 more)
src/: CMakeLists.txt  smolverify.cpp  uthenticode-config.cmake  uthenticode.cpp
src/include/: smolverify.h  uthenticode.h
src/svcli/: CMakeLists.txt  svcli.cpp
test/: CMakeLists.txt  certificate-test.cpp  helpers.h  signeddata-test.cpp  smolverify-test.cpp  uthenticode-test.cpp  wincert-test.cpp
util/: release
